force-app/main/default/objects/GL_Feeder__c/GL_Feeder__c.object-meta.xml
<CustomObject>
    <label>GL Feeder</label>
    <nameField>
        <displayFormat>GL-{00000000}</displayFormat>
        <label>GL Feeder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Feeder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>