force-app/main/default/objects/GL_Feeder__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GL Feeder</relationshipLabel>
    <relationshipName>GL_Feeder</relationshipName>
    <type>Lookup</type>
</CustomField>