force-app/main/default/objects/GL_Feeder__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>GL Feeder</relationshipLabel>
    <relationshipName>GL_Feeder</relationshipName>
    <type>Lookup</type>
</CustomField>