force-app/main/default/objects/GL_Feeder__c/fields/Donor_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Donor_Contribution__c</fullName>
    <label>Donor Contribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>