force-app/main/default/objects/GL_Feeder__c/fields/Donor_Name_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name_Custom_Field__c</fullName>
    <label>Donor Name Custom Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>