force-app/main/default/objects/GL_Feeder__c/fields/Donor_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_Reference_ID__c</fullName>
    <label>Donor Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>