force-app/main/default/objects/GL_Feeder__c/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <label>Donor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>