force-app/main/default/objects/GL_Feeder__c/fields/Gift_ID__c.field-meta.xml
<CustomField>
    <fullName>Gift_ID__c</fullName>
    <label>Gift ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>