force-app/main/default/objects/GL_Feeder__c/fields/Is_anonymous__c.field-meta.xml
<CustomField>
    <fullName>Is_anonymous__c</fullName>
    <formula>Payment__r.ucinn_ascendv2__Is_Anonymous__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is anonymous</label>
    <type>Checkbox</type>
</CustomField>