force-app/main/default/objects/GL_Feeder__c/fields/Journal_ID__c.field-meta.xml
<CustomField>
    <fullName>Journal_ID__c</fullName>
    <label>Journal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>