force-app/main/default/objects/GL_Feeder__c/fields/Ledger_Account__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Account__c</fullName>
    <label>Ledger Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>