force-app/main/default/objects/GL_Feeder__c/fields/Legacy_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Legacy_GL_Account__c</fullName>
    <label>Legacy GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>