force-app/main/default/objects/GL_Feeder__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>