force-app/main/default/objects/GL_Feeder__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GL Feeder</relationshipLabel>
    <relationshipName>GL_Feeder</relationshipName>
    <type>Lookup</type>
</CustomField>