force-app/main/default/objects/GL_Feeder__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>GL Feeder</relationshipLabel>
    <relationshipName>GL_Feeder</relationshipName>
    <type>Lookup</type>
</CustomField>