force-app/main/default/objects/GL_Feeder__c/fields/Pledge_Gift__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge/Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>GL Feeder</relationshipLabel>
    <relationshipName>GL_Feeder</relationshipName>
    <type>Lookup</type>
</CustomField>