force-app/main/default/objects/GL_Feeder__c/fields/Session_Is_Sent_to_GL__c.field-meta.xml
<CustomField>
    <fullName>Session_Is_Sent_to_GL__c</fullName>
    <formula>Session__r.ucinn_ascendv2__Is_Sent_to_G_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Is Sent to GL</label>
    <type>Checkbox</type>
</CustomField>