force-app/main/default/objects/GL_Feeder__c/fields/Session_Sent_to_GL_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Sent_to_GL_Date__c</fullName>
    <formula>Session__r.ucinn_ascendv2__Sent_to_G_L_Date__c</formula>
    <label>Session Sent to GL Date</label>
    <type>Date</type>
</CustomField>