force-app/main/default/objects/GL_Feeder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Constituent__c</columns>
    <columns>Organization__c</columns>
    <columns>Journal_Date__c</columns>
    <columns>Designation__c</columns>
    <columns>memo__c</columns>
    <columns>Pledge_Gift__c</columns>
    <columns>Session__c</columns>
    <columns>Session_Is_Sent_to_GL__c</columns>
    <columns>Session_Sent_to_GL_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>